@@ -257,7 +257,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-invoker-plugin</artifactId>
-                    <version>3.0.1</version>
+                    <version>3.1.0</version>
                     <configuration>
                         <projectsDirectory>it</projectsDirectory>
                         <pomIncludes>
@@ -274,6 +274,12 @@
                             <maven.compiler.target>1.7</maven.compiler.target>
                         </properties>
                         <showErrors>true</showErrors>
+                        <!-- Estimated test's time should not take more than 10 sec on 4х CPU (2GHz) -->
+                        <!-- with limited amount of memory. It allows to detect memory leaks. -->
+                        <!-- Special cases should be defined in invoker.properties file. -->
+                        <!-- !!! Don't increase these parameters without special need !!! -->
+                        <timeoutInSeconds>20</timeoutInSeconds>
+                        <mavenOpts>-Xms64m -Xmx128m</mavenOpts>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -363,7 +369,9 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <!-- JaCoCo agent cannot be attached if ${argLine} is missed -->
-                    <argLine>${jacococ.argLine} -XX:MaxPermSize=128m -Xms512m -Xmx2048m</argLine>
+                    <!-- It needs to detect memory leaks. -->
+                    <!-- !!! Don't increase these parameters without special need !!! -->
+                    <argLine>${jacococ.argLine} -Xms8m -Xmx64m</argLine>
                 </configuration>
             </plugin>
         </plugins>
